<resources>
    <string name="app_name">Oyee Taxi</string>
    <string name="apklog">OyeeTaxiLog</string>
    <string name="please_click_back_again_to_exit">Presione otra vez para Salir</string>
    <string name="title_activity_main">Oyee Taxi!</string>
    <string name="title_home">Mapa</string>
    <string name="title_dashboard">Viajes</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_permissions">Permissions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alow_and_continue">Permitir y Continuar</string>
    <string name="localization_permission_description">Bienvenido a Oyee Taxi. Para conseguir que la aplicación funcione de manera correcta primero necesitamos acceso a la Ubicación. De otra manera no será posible continuar y brindarle nuestros servicios. Gracias por Preferirnos</string>
    <string name="storage_permission_description">Además Oyee Taxi necesita acceder al almacenamiento del telefono para guardar los datos de la aplicación. Es indispensable que acceda para continuar. Gracias y a disfrutar</string>
    <string name="permission_required">Permiso Requerido</string>
    <string name="notificationServiceTitle">Recogidas más rápidas y viajes mas seguros</string>
    <string name="notificationServiceText">"Mientras usas Oyee Taxi tu ubicación se obtiene de manera cifrada para que los viajes sean precisos y seguros"</string>
    <string name="no_vehicles_aviables_for_now">No hay vehículos disponibles por el momento</string>
    <string name="registro_message_start_screen">Bienvenido a Oyee Taxi. Tu aplicación preferida para viajar por Cuba, a continuación te guiaremos en el proceso de registro. Comencemos !</string>
    <string name="cliente_type_message">Como pasajero podrá viajar rápidamente asi como agendar sus viajes con nuestros conductores, los honorarios del servicio recibido será acordado entre las dos partes en la propia aplicación. También si lo desea más adelante podrá aplicar para ser Conductor, unicamente completando las formalidades.</string>
    <string name="conductor_type_message">Como conductor el uso de la aplicación es gratuita por un período de tiempo, luego de generar veneficios comenzarán los pagos de las mensualidades para mejorar el sistema y su mantenimiento, los honorarios por el servicio prestado a los clientes serán acordados entre las dos partes y además podrá recibir todos los servicios como pasajero.</string>
    <string name="personal_information">Información personal</string>
    <string name="remember_credentials">Recordar mis credenciales</string>
    <string name="continue_">CONTINUAR</string>
    <string name="finalizar_">FINALIZAR REGISTO</string>
    <string name="uppload_app_update">SUBIR ACTUALIZACION</string>
    <string name="apply">APLICAR</string>
    <string name="send_viaje">SOLICITAR VIAJE</string>
    <string name="cancel">CANCELAR</string>
    <string name="fail_server_conection">Falló la conexión con el Servidor</string>
    <string name="fail_internet_conection">Verifique su conexión a Internet</string>
    <string name="number_validation_is_disable">La validacion de números está deshabilitada por el momento</string>
    <string name="fail_server_comunication">Falló la conexión con el Servidor :(</string>
    <string name="server_fail_to_sent_email">El servidor no pudo enviarle el código de verificación a su dirección de correo, por favor intentelo mas tarde. Si el problema persiste contacte con soporte. Gracias por usar nuestros servicios</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="user_temporary_disabled">Usuario deshabilitado temporalmente</string>
    <string name="user_disabled">Usuario Deshabilitado</string>
    <string name="reason">Motivo :</string>
    <string name="message">Mensaje </string>
    <string name="updating_user">Actualizando Usuario ...</string>
    <string name="updating_vehicle">Actualizando Vehiculo ...</string>
    <string name="image_sussefuctly_selected">Imágen seleccionada satisfactoriamente</string>
    <string name="please_come_back_and_select_vahicle_type">Por favor regrese y seleccione el tipo de vehículo</string>
    <string name="vehicle_sussefuctly_registered">Vehiculo registrado satisfactoriamente</string>
    <string name="finishing_vahicle_registration">Finalizando Registro del Vehiculo ...</string>
    <string name="vehiculo_actualizado_satisfactoriamente">Vehiculo Actualizado Satisfactoriamente</string>
    <string name="error_al_actualizar_vehiculo">Error al Intentar Actualizar el Vehiculo</string>
    <string name="boton_vehiculo_activo_true">Vehículo\nActivo</string>
    <string name="boton_vehiculo_activo_false">Vehículo\nInactivo</string>
    <string name="boton_actualizacion_activa_true">Activa</string>
    <string name="boton_actualizacion_activa_false">Inactiva</string>
    <string name="user_sussefuctly_updated">Usuario Actualizado Satisfactoriamente</string>
    <string name="user_update_fail">Error al Intentar Actualizar el Usuario</string>
    <string name="agendar_mi_viaje"> Agendar mi viaje </string>
    <string name="agendado"> </string>
    <string name="forget_my_password">Restablecer mi contraseña Aquí</string>
    <string name="verification_code_sent">El código de verificación fué enviado satisfactoriamente a su dirección de correo personal registrada en Oyee Taxi. Para restablecer su contraseña revise la bandeja de entrada y siga las instrucciones</string>
    <string name="downloading">Descargando...</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Acceso al almacenamiento requerido para comenzar la descarga de la actualización</string>
    <string name="storage_permission_denied">El acceso al almacenamiento fué denegado</string>
    <string name="ok">OK</string>
    <string name="downloading_update">Descargando actualización ...</string>
    <string name="finishing">Finalizando ...</string>
    <string name="update_done">Descarga completada</string>
    <string name="error_try_again">Falló la descarga. Intentelo nuevamente</string>
    <string name="verify_number">Verificando su número ...</string>
    <string name="user_already_exist">Ya existe un usuario con ese número de teléfono</string>
    <string name="found_no_vehicles">Usted aún no tiene vehículos</string>
    <string name="vehicle_register_fail">Ha ocurrido un error al intentar registrar el vehículo</string>
    <string name="user_register_fail">Ha ocurrido un error al intentar registrar el usuario</string>
    <string name="no_vehicles_type_available">No hay Tipos de Vehículos disponibles en este momento</string>
    <string name="no_app_updates_list_available">No hay Actualizaciones disponibles en el servidor por el momento</string>
    <string name="no_users_available">No hay Usuarios disponibles en este momento</string>
    <string name="no_provinces_availables">No hay Provincias disponibles en este momento</string>
    <string name="user_registered_secces">Usuario registrado satisfactoriamente</string>
    <string name="disable_server_for_clients_description">Precaución: Si desactiva el servidor, los clientes no podrán iniciar sesión. Deberá usar esta opción con propósitos administrativos muy específicos</string>
    <string name="disable_server_for_admins_description">Precaución: Si desactiva el servidor, los administradores no podrán iniciar sesión. Deberá usar esta opción con propósitos administrativos muy específicos</string>
    <string name="disable_app_update_description">Precaución: Si desactiva las actualizaciones en el servidor, todos los usuarios dejarán de recibir las actualizaciones de la aplicación. Deberá usar esta opción con propósitos administrativos muy específicos</string>
    <string name="register_new_users_description">Aqui puede definir si se admitirán nuevos registros para usuarios de tipo (Conductor y/o Pasajeros) de ahora en adelante. Deberá usar esta opción con propósitos administrativos muy específicos</string>
    <string name="server_active_for_clients">Servidor activo para clientes</string>
    <string name="server_active_for_admins">Servidor activo para administradores</string>
    <string name="app_update_enabled">Actualizaciones activadas</string>
    <string name="star_sesion">Iniciando sesión ...</string>
    <string name="appling_server_configuration">Aplicando cambios en el servidor ...</string>
    <string name="adding_app_update">Añadiendo actualizacion ...</string>
    <string name="deleting_app_update">Eliminando actualizacion ...</string>
    <string name="no_vehicles_actives">Usted no tiene vehículo activo</string>
    <string name="cheking_phone_number">Verificando su número de teléfono ...</string>
    <string name="cheking_your_code">Verificando su código ...</string>
    <string name="verification_code_is_incorrect">El Código de Verificación es Incorrecto</string>
    <string name="not_configurable_provider">Este proveedor no es configurable</string>
    <string name="email_server_provider_description">Aquí puedes configura el proveedor que gestiona el envío de automático de correos electrónicos a los clientes</string>
    <string name="application_updates_configuration_description">Aquí puedes configurar las actualizaciones de la aplicación que estarán disponibles para los clientes</string>
    <string name="communication_times_rate_configuration_description">Aquí puedes configurar los tiempos e intervalos a los que la aplicación se comunicará con el servidor para obtener o enviar datos</string>
    <string name="email_social_network_description">Aquí puedes dar visibilidad a todas tus redes</string>
    <string name="config_email_provider">  Configuración del Proveedor de Correos</string>
    <string name="config_app_update_config">  Configurar las Actualizaciones de la App</string>
    <string name="config_communication_times_rate_config">  Configurar Intervalos de Comunicación</string>
    <string name="config_sms_provider">  Configurar</string>
    <string name="config_social_network">  Configuración de Redes Sociales</string>
    <string name="select_social_network_to_modify">Seleccione la red social que desea modificar</string>
    <string name="not_abailable_for_the_moment">No disponible por el momento</string>
    <string name="elegible_for_new_clients">Seleccionable para conductores</string>
    <string name="force_update">Actualización Requerida</string>
    <string name="to_pasanger_transport">Para transporte de pasajeros</string>
    <string name="to_charge_transport">Para transporte de carga</string>
    <string name="admin_provinces">Provincias\n</string>
    <string name="admin_register">Registro de Usuarios\n</string>
    <string name="admin_users">Usuarios\n</string>
    <string name="admin_vehicles_types">Tipos Vehículos\n</string>
    <string name="admin_vehicles">Vehículos\n</string>
    <string name="code_sent">Código enviado satisfactoriamente</string>
    <string name="pasajero_select">PASAJERO</string>
    <string name="conductor_select">CONDUCTOR</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Correo Electrónico</string>
    <string name="bird_date">Fecha de Nacimiento</string>
    <string name="province_of_residence">Provincia de Residencia</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Verificar su Contraseña</string>
    <string name="user_verification">Verificación de Usuario</string>
    <string name="start_sesion">Iniciar sesión</string>
    <string name="phone">Teléfono</string>
    <string name="start">INICIAR</string>
    <string name="register_new_user_here">Registrar usuario nuevo</string>
    <string name="here">Aquí</string>
</resources>