<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.permissions.activity.PermissionsActivity">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="239dp"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_permission_captio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ubication" />



    <TextView
        android:id="@+id/tv_permission_captio"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/permission_required"
        app:layout_constraintBottom_toTopOf="@+id/tv_permission_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/tv_permission_description"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/localization_permission_description"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/continueButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="32dp"
        android:text="@string/alow_and_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>