<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/user_registration3"
    tools:context=".ui.userRegistration.activity.UserRegistrationActivity"
>


    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/tv_app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="Registrarme en Oyee Taxi como :"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        />


    <RadioGroup
        android:layout_marginTop="12dp"
        android:id="@+id/rg_user_type"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_title">


        <RadioButton
            android:id="@+id/rb_pasajero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/pasajero_select"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_conductor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_gender_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/conductor_select"
            android:textColor="@drawable/drawable_gender_tab_text_color_selector"
            android:textStyle="bold" />
    </RadioGroup>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_type_selected_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_user_type"
        app:srcCompat="@drawable/ic_no_type_selected"

        />


    <TextView

        android:id="@+id/tv_user_type_selected_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:lines="7"
        android:maxLines="8"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:enabled="false"
        android:id="@+id/continueButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>