<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/user_registration5"
    tools:context=".ui.userRegistration.activity.UserRegistrationActivity"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/climageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user"
        >


        <com.mikhaellopez.circularimageview.CircularImageView

            android:id="@+id/imagePerfil"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/yellow_primary"
            app:civ_border_width="2dp"
            app:civ_shadow="true"
            app:civ_shadow_radius="0dp"
            app:civ_shadow_color="@color/yellow_primary"/>

        <ImageView
            android:visibility="invisible"
            android:id="@+id/imagePerfilOld"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />




    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/climageView"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="4dp"
        >


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/personal_information"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/tv_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="CLIENTE\nTELEFONO"
            android:textAlignment="textStart"
            android:textColor="@color/colorCrema"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/continueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/climageView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="12dp"
            android:id="@+id/llPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/climageView">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvPassword1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconCheckable="true"
                app:endIconMode="password_toggle"
                app:helperText=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"

                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="0dp"
            android:id="@+id/llPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llPassword1">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tvPassword2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconCheckable="true"
                app:endIconMode="password_toggle"
                app:helperText=" "
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_key">



                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_marginTop="12dp"
            android:id="@+id/checkboxRememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_credentials"
            app:layout_constraintStart_toStartOf="@+id/llPassword2"
            app:layout_constraintTop_toBottomOf="@+id/llPassword2"
            android:checked="true"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            />


    </LinearLayout>

    </ScrollView>

    <Button
        android:enabled="true"
        android:id="@+id/continueButton"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:text="@string/continue_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>